Small whitespace fix

--- a/_sass/widgets/_table.scss
+++ b/_sass/widgets/_table.scss
@@ -15,8 +15,12 @@ th {
   font-size: 1.6em;
 }
 
+tr {
+  margin: 0px 5px;
+}
+
 td {
-  padding: 5px 0;
+  padding: 5px 5px;
 }
 
 @media all and (min-width: 476px) {
